iOS: Dropbox login/logout now works from CloudPreferences. Several bug fixes for iPad and iOS 6.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -559,6 +559,8 @@
     <BundleResource Include="Images\WhiteIcons\android.png" />
     <BundleResource Include="Images\WhiteIcons\android%402x.png" />
     <BundleResource Include="Settings.bundle\Root.plist" />
+    <BundleResource Include="Images\Buttons\dropbox.png" />
+    <BundleResource Include="Images\Buttons\dropbox%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.iOS.csproj">
