--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -570,8 +570,6 @@
     <BundleResource Include="Images\Buttons\dropbox%402x.png" />
     <BundleResource Include="Images\Nav\album.png" />
     <BundleResource Include="Images\Nav\album%402x.png" />
-    <BundleResource Include="Images\Nav\albums.png" />
-    <BundleResource Include="Images\Nav\albums%402x.png" />
     <BundleResource Include="Images\Nav\artist.png" />
     <BundleResource Include="Images\Nav\artist%402x.png" />
     <BundleResource Include="Images\Nav\artists.png" />
@@ -582,6 +580,14 @@
     <BundleResource Include="Images\Nav\song%402x.png" />
     <BundleResource Include="Images\Icons\dropbox.png" />
     <BundleResource Include="Images\Icons\dropbox%402x.png" />
+    <BundleResource Include="Images\Tabs\artists.png" />
+    <BundleResource Include="Images\Tabs\artists%402x.png" />
+    <BundleResource Include="Images\Tabs\songs.png" />
+    <BundleResource Include="Images\Tabs\songs%402x.png" />
+    <BundleResource Include="Images\Tabs\albums.png" />
+    <BundleResource Include="Images\Tabs\albums%402x.png" />
+    <BundleResource Include="Images\Nav\albums.png" />
+    <BundleResource Include="Images\Nav\albums%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.iOS.csproj">
