--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -364,5 +364,6 @@
     <Compile Include="Messages\MobileLibraryBrowserChangeQueryMessage.cs" />
     <Compile Include="Messages\MobileLibraryBrowserPopBackstackMessage.cs" />
     <Compile Include="Messages\EqualizerPresetSelectedMessage.cs" />
+    <Compile Include="Models\MobileOptionsMenuEntity.cs" />
   </ItemGroup>
 </Project>
