iOS: Pimped the look of ResumePlayback. The cells are now disabled if the user cannot resume from a device. Several animation bug fixes in different cell views. More bug fixes.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -365,5 +365,6 @@
     <Compile Include="Messages\MobileLibraryBrowserPopBackstackMessage.cs" />
     <Compile Include="Messages\EqualizerPresetSelectedMessage.cs" />
     <Compile Include="Models\MobileOptionsMenuEntity.cs" />
+    <Compile Include="Models\ResumePlaybackEntity.cs" />
   </ItemGroup>
 </Project>
