WPF/Android: Refactoring of CloudService/CloudLibraryService and implementations of Dropbox. CloudService is now strictly used for uploading/downloading files from cloud services. CloudLibraryService is now using a generic CloudService; that way the logic is not duplicated into different implementations.

--- a/MPfm/MPfm.Library/MPfm.Library.Android.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.Android.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Objects\CloudDeviceInfo.cs" />
     <Compile Include="Objects\CloudPlaylist.cs" />
     <Compile Include="Objects\PlaylistAudioFile.cs" />
+    <Compile Include="Services\CloudLibraryService.cs" />
     <Compile Include="Services\Exceptions\CloudAppNotLinkedException.cs" />
     <Compile Include="Objects\NetworkState.cs" />
     <Compile Include="Objects\PlaylistFile.cs" />
