iOS: Implemented iOSDropboxService for ICloudService. However, uploading files doesn't work, not sure yet why...

--- a/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
@@ -249,5 +249,7 @@
     <Compile Include="Services\Interfaces\ICloudLibraryService.cs" />
     <Compile Include="Objects\CloudPlaylist.cs" />
     <Compile Include="Objects\CloudDeviceInfo.cs" />
+    <Compile Include="Services\Interfaces\ICloudService.cs" />
+    <Compile Include="Services\CloudLibraryService.cs" />
   </ItemGroup>
 </Project>
