--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -366,5 +366,6 @@
     <Compile Include="Messages\EqualizerPresetSelectedMessage.cs" />
     <Compile Include="Models\MobileOptionsMenuEntity.cs" />
     <Compile Include="Models\ResumePlaybackEntity.cs" />
+    <Compile Include="Config\Models\GeneralAppConfig.cs" />
   </ItemGroup>
 </Project>
