iOS: Added table view cell for markers. Marker cells can now be expanded/collapsed with a long press. Fixed iPhone bugs after changes on iPad.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -326,6 +326,9 @@
     </Compile>
     <Compile Include="Classes\Objects\PreferenceCellType.cs" />
     <Compile Include="Classes\Objects\PreferenceCellItem.cs" />
+    <Compile Include="Classes\Controls\MPfmMarkerTableViewCell.cs">
+      <DependentUpon>MPfmCollectionViewCell.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
