iOS: Added new style for SemiTransparentButton; now a lot more transparent but with an outline/border. Fixed several bugs in new player controls scroll view. Added ScaleView to simulate a button click with a group of views (used to open the Effects view from the Effects view in the player controls scale view). Replaced all splash screens with white space for now.

--- a/MPfm/MPfm.iOS/Info.plist
+++ b/MPfm/MPfm.iOS/Info.plist
@@ -54,13 +54,11 @@
 		<key>UINavigationBar</key>
 		<dict>
 			<key>Style</key>
-			<string>UIBarStyleBlack</string>
+			<string>UIBarStyleDefault</string>
 			<key>Translucent</key>
 			<false/>
 		</dict>
 	</dict>
-	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleBlackOpaque</string>
 	<key>CFBundleDisplayName</key>
 	<string>Sessions</string>
 	<key>UIPrerenderedIcon</key>
