--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -336,6 +336,7 @@
     </Compile>
     <Compile Include="Classes\Controls\MPfmTabBarController.cs" />
     <Compile Include="Classes\Controls\MPfmSemiTransparentRoundButton.cs" />
+    <Compile Include="Classes\Controls\MPfmTableView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
