iOS: Now updating marker position in wave form in real time. More bug fixes for markers.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -367,5 +367,6 @@
     <Compile Include="Models\MobileOptionsMenuEntity.cs" />
     <Compile Include="Models\ResumePlaybackEntity.cs" />
     <Compile Include="Config\Models\GeneralAppConfig.cs" />
+    <Compile Include="Messages\MarkerPositionUpdatedMessage.cs" />
   </ItemGroup>
 </Project>
