--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -368,5 +368,6 @@
     <Compile Include="Models\ResumePlaybackEntity.cs" />
     <Compile Include="Config\Models\GeneralAppConfig.cs" />
     <Compile Include="Messages\MarkerPositionUpdatedMessage.cs" />
+    <Compile Include="Messages\MarkerActivatedMessage.cs" />
   </ItemGroup>
 </Project>
