iOS: Albums view in MobileLibraryBrowser is now ordered by artist; sections with headers have been added to regroup albums by artist.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -337,6 +337,7 @@
     <Compile Include="Classes\Controls\MPfmTabBarController.cs" />
     <Compile Include="Classes\Controls\MPfmSemiTransparentRoundButton.cs" />
     <Compile Include="Classes\Controls\MPfmTableView.cs" />
+    <Compile Include="Classes\Controls\MPfmCollectionHeaderView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
