iOS: MobileLibraryBrowser - all items are now split into sections for every browser type. Added reusable header in Songs for every album/section. Now using Guids to identify which items are clicked/edited/etc.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -338,6 +338,7 @@
     <Compile Include="Classes\Controls\MPfmSemiTransparentRoundButton.cs" />
     <Compile Include="Classes\Controls\MPfmTableView.cs" />
     <Compile Include="Classes\Controls\MPfmCollectionHeaderView.cs" />
+    <Compile Include="Classes\Controls\MPfmAlbumHeaderView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
