--- a/MPfm/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.csproj
@@ -138,6 +138,8 @@
     <Compile Include="Messages\ApplicationCloseMessage.cs" />
     <Compile Include="Messages\ActivateLockScreenMessage.cs" />
     <Compile Include="Messages\EqualizerPresetSelectedMessage.cs" />
+    <Compile Include="Messages\MarkerActivatedMessage.cs" />
+    <Compile Include="Messages\MarkerPositionUpdatedMessage.cs" />
     <Compile Include="Messages\MobileLibraryBrowserChangeQueryMessage.cs" />
     <Compile Include="Messages\MobileLibraryBrowserPopBackstackMessage.cs" />
     <Compile Include="Messages\PlaylistUpdatedMessage.cs" />
