--- a/MPfm/MPfm.Fonts/MPfm.Fonts.csproj
+++ b/MPfm/MPfm.Fonts/MPfm.Fonts.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -94,6 +94,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DroidSansMono.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Roboto-Regular.ttf" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
