iOS: Replaced contextual menu in Artists and Songs tab of MobileLibraryBrowser by a new concept. Instead of sliding in from the right, the menu is now hidden below the other controls; the cell height now expands/collapses depending on which cell is being edited. The buttons now have text and are much bigger; it is much clearer what they do now.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -340,6 +340,7 @@
     <Compile Include="Classes\Controls\MPfmTableView.cs" />
     <Compile Include="Classes\Controls\MPfmCollectionHeaderView.cs" />
     <Compile Include="Classes\Controls\MPfmAlbumHeaderView.cs" />
+    <Compile Include="Classes\Controls\MPfmSecondaryMenuButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
